# autolab-rapi

./: .gitignore  AUTHORS  BUILDNUM-GEN  CMakeLists.txt  GIT-VERSION-GEN  INSTALL  README  autolab-rapi-autolabtracker.pc.in  autolab-rapi-chatterbox.pc.in  autolab-rapi-gui.pc.in  autolab-rapi-rpc.pc.in  autolab-rapi-stage.pc.in  autolab-rapi.pc.in  build  config.h.in
doc/: Doxyfile  Makefile  README  sourcedocs.sh
examples/: CMakeLists.txt
examples/chatterbox/: CMakeLists.txt  chatterbox.cpp  chatterboxctrl.cpp  chatterboxctrl.h  startup-demo
examples/stage/: CMakeLists.txt  wander.cpp  wanderctrl.cpp  wanderctrl.h
examples/stage/world/: .#fasr_cost.world.1.15  .#fasr_cost.world.1.18  .#fasr_large.world.1.2  .#fasr_large.world.1.3  .#fasr_large.world.1.5  map.inc  pioneer.inc  sick.inc  wander.world
examples/stage/world/CVS/: Entries  Repository
examples/stage/world/bitmaps/CVS/: Entries  Repository  Root
librapiautolabtracker/: CMakeLists.txt  RapiAutolabTracker  autolabtracker.cpp  autolabtracker.h
librapichatterbox/: CMakeLists.txt  RapiChatterbox  cbbumper.cpp  cbbumper.h  cbcliffsensor.cpp  cbcliffsensor.h  cbcreatebutton.cpp  cbcreatebutton.h  cbdefinitions.h  cbdriver.cpp  cbdriver.h  cbdrivetrain2dof.cpp  cbdrivetrain2dof.h  cbfiducialfinder.cpp  cbfiducialfinder.h  cbfrontfiducialfinder.cpp  cbfrontfiducialfinder.h  cbirsensor.cpp  cbirsensor.h  cblaser.cpp  cblaser.h  cblights.cpp  cblights.h  cblowsidedriver.cpp  cblowsidedriver.h  cbodometry.cpp  cbodometry.h  cbovercurrentsensor.cpp  cbovercurrentsensor.h  cbphotosensor.cpp  cbphotosensor.h  cbpowerpack.cpp  cbpowerpack.h  cbrobot.cpp  cbrobot.h  cbtextdisplay.cpp  cbtextdisplay.h  cbtopfiducialfinder.cpp  cbtopfiducialfinder.h  cbtypes.h  (+6 more)
librapichatterbox/i2c/: CMakeLists.txt  Config.h  Crc8.c  Crc8.h  DumpMem.h  Log.c  i2c-api.c  i2c-dev.h  i2c-io-api.c  i2c-io-api.h  i2c-io.h  i2c.h  robostix_drv.h
librapicore/: CMakeLists.txt  RapiCore  analogsensorarray.cpp  analogsensorarray.h  binarysensorarray.cpp  binarysensorarray.h  blobfinder.cpp  blobfinder.h  booleanstatevariable.cpp  booleanstatevariable.h  bumper.cpp  bumper.h  conversions.h  datalogger.cpp  datalogger.h  dataupdateobserver.h  device.cpp  device.h  drivetrain2dof.cpp  drivetrain2dof.h  fiducialfinder.cpp  fiducialfinder.h  jsonrpc_server.h  lights.cpp  lights.h  limit.cpp  limit.h  localizer2d.cpp  localizer2d.h  network_client_tcp.h  network_client_udp.h  network_server_tcp.h  network_server_udp.h  odometry.cpp  odometry.h  point2d.cpp  point2d.h  pose2d.cpp  pose2d.h  pose3d.cpp  (+49 more)
librapicore/redis/: credis.c  credis.h
librapigui/: CMakeLists.txt  RapiGui  binarysensorarraywidget.cpp  binarysensorarraywidget.h  consolewidget.cpp  consolewidget.h  customdialog.cpp  customdialog.h  databar.cpp  databar.h  dataled.cpp  dataled.h  dataline.cpp  dataline.h  devicewidget.cpp  devicewidget.h  devicewidgetlist.cpp  devicewidgetlist.h  drivetrain2dofwidget.cpp  drivetrain2dofwidget.h  fiducialfinderwidget.cpp  fiducialfinderwidget.h  gui.cpp  gui.h  locationwidget.cpp  locationwidget.h  mainwindow.cpp  mainwindow.h  pose2dwidget.cpp  pose2dwidget.h  powerpackwidget.cpp  powerpackwidget.h  rangefinderwidget.cpp  rangefinderwidget.h  robotwidget.cpp  robotwidget.h  textdisplaywidget.cpp  textdisplaywidget.h  unicodechar.h  variablemonitorwidget.cpp  (+3 more)
librapigui/images/: ledgreenoff.xpm  ledgreenon.xpm  ledredoff.xpm  ledredon.xpm
librapirpc/: CMakeLists.txt  RapiRpc  client.cpp  robotrpcclient.cpp  robotrpcclient.h  rpcdrivetrain.cpp  rpcdrivetrain.h  rpcpowerpack.cpp  rpcpowerpack.h  rpcrangefinder.cpp  rpcrangefinder.h  rpcrobot.cpp  rpcrobot.h  simplerpcclient.cpp
librapistage/: CMakeLists.txt  RapiLooseStage  RapiStage  loosestageblobfinder.cpp  loosestageblobfinder.h  loosestagedrivetrain2dof.cpp  loosestagedrivetrain2dof.h  loosestagefiducialfinder.cpp  loosestagefiducialfinder.h  loosestagelaser.cpp  loosestagelaser.h  loosestagelights.cpp  loosestagelights.h  loosestagepowerpack.cpp  loosestagepowerpack.h  loosestagerobot.cpp  loosestagerobot.h  loosestagesonar.cpp  loosestagesonar.h  loosestagetextdisplay.cpp  loosestagetextdisplay.h  stageblobfinder.cpp  stageblobfinder.h  stagedrivetrain2dof.cpp  stagedrivetrain2dof.h  stagefiducialfinder.cpp  stagefiducialfinder.h  stagelaser.cpp  stagelaser.h  stagelights.cpp  stagelights.h  stageodometry.cpp  stageodometry.h  stagepowerpack.cpp  stagepowerpack.h  stagerobot.cpp  stagerobot.h  stagesonar.cpp  stagesonar.h  stagetextdisplay.cpp  (+1 more)
